Current location marker added to the map section. Sample pie chart added to the graph section.

--- a/GoogleMapTest/app/src/main/res/layout/fragment_graph.xml
+++ b/GoogleMapTest/app/src/main/res/layout/fragment_graph.xml
@@ -12,4 +12,13 @@
         android:textStyle="bold"
         android:textColor="@color/Black"/>
 
+
+    <com.androidplot.pie.PieChart
+        android:id="@+id/mySimplePieChart"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        androidPlot.title="A Simple XY Plot"
+        androidPlot.domainLabel="Domain"
+        androidPlot.rangeLabel="Range"/>
+
 </LinearLayout>
