--- a/GoogleMapTest/app/src/main/res/layout/fragment_map.xml
+++ b/GoogleMapTest/app/src/main/res/layout/fragment_map.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+<LinearLayout
+    android:id="@+id/topLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,12 +18,37 @@
         android:textSize="40dp"
         android:textStyle="bold" />
 
+ </LinearLayout>
+
+
+ <LinearLayout
+     android:id="@+id/middleLayout"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:orientation="vertical">
+
+     <Spinner
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:id="@+id/spinner"
+         android:layout_weight="1" />
+
+     </LinearLayout>
+
+<LinearLayout
+    android:id="@+id/bottomLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
     <fragment
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_map" />
 
 </LinearLayout>
+
+
+</RelativeLayout>
