--- a/GoogleMapTest/app/src/main/res/layout/fragment_map.xml
+++ b/GoogleMapTest/app/src/main/res/layout/fragment_map.xml
@@ -6,16 +6,16 @@
     android:orientation="vertical">
 <LinearLayout
     android:id="@+id/topLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="150dip"
+    android:layout_height="wrap_content">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="120dip"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Map"
         android:textColor="@color/Black"
-        android:textSize="40dp"
+        android:textSize="30dip"
         android:textStyle="bold" />
 
  </LinearLayout>
@@ -23,23 +23,38 @@
 
  <LinearLayout
      android:id="@+id/middleLayout"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     android:orientation="vertical">
-
-     <Spinner
+     android:layout_below="@id/topLayout"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+     <TextView
+         android:id="@+id/labelcity"
+         android:text="City"
          android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_height="wrap_content" />
+     <Spinner
+         android:layout_width="150dip"
+         android:layout_height="40dip"
+         android:layout_toRightOf="@+id/labelcity"
          android:id="@+id/spinner"
          android:layout_weight="1" />
+     <EditText
+         android:layout_toRightOf="@id/spinner"
+         android:id="@+id/txtPostCode"
+         android:hint="Pin Code"
+         android:layout_height="40dip"
+         android:layout_width="120dip" />
+    </RelativeLayout>
 
-     </LinearLayout>
+ </LinearLayout>
 
 <LinearLayout
     android:id="@+id/bottomLayout"
+    android:layout_below="@+id/middleLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 
     <fragment
         android:id="@+id/map"
