--- a/GoogleMapTest/app/src/main/res/layout/fragment_map.xml
+++ b/GoogleMapTest/app/src/main/res/layout/fragment_map.xml
@@ -30,22 +30,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
      <TextView
-         android:id="@+id/labelcity"
+         android:id="@+id/text_view_city"
          android:text="City"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      <Spinner
          android:layout_width="150dip"
          android:layout_height="40dip"
-         android:layout_toRightOf="@+id/labelcity"
-         android:id="@+id/spinner"
+         android:layout_toRightOf="@+id/text_view_city"
+         android:id="@+id/spinner_city"
          android:layout_weight="1" />
      <EditText
-         android:layout_toRightOf="@id/spinner"
-         android:id="@+id/txtPostCode"
+         android:layout_toRightOf="@id/spinner_city"
+         android:id="@+id/text_post_code"
          android:hint="Pin Code"
          android:layout_height="40dip"
-         android:layout_width="120dip" />
+         android:layout_width="120dip"
+         android:inputType="number"/>
+
+        <Button
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_toRightOf="@id/text_post_code"
+            android:background="@drawable/search_icon"
+            android:id="@+id/button_search"/>
     </RelativeLayout>
 
  </LinearLayout>
