--- a/GoogleMapTest/app/src/main/res/layout/fragment_graph.xml
+++ b/GoogleMapTest/app/src/main/res/layout/fragment_graph.xml
@@ -14,6 +14,11 @@
         android:textStyle="bold" />
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@color/Black"/>
+
     <com.androidplot.pie.PieChart
         android:id="@+id/mySimplePieChart"
         androidPlot.domainLabel="Domain"
