--- a/GoogleMapTest/app/src/main/res/layout/fragment_map.xml
+++ b/GoogleMapTest/app/src/main/res/layout/fragment_map.xml
@@ -1,77 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-<LinearLayout
-    android:id="@+id/topLayout"
-    android:layout_width="150dip"
-    android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="120dip"
+    <LinearLayout
+        android:id="@+id/topLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Map"
-        android:textColor="@color/Black"
-        android:textSize="30dip"
-        android:textStyle="bold" />
+        android:gravity="center_horizontal">
 
- </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Map"
+            android:textColor="@color/Black"
+            android:textSize="30dip"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@color/Black"/>
 
 
- <LinearLayout
-     android:id="@+id/middleLayout"
-     android:layout_below="@id/topLayout"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content">
-    <RelativeLayout
+    <!--<LinearLayout
+        android:id="@+id/middleLayout"
+        android:layout_below="@id/topLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-     <TextView
-         android:id="@+id/text_view_city"
-         android:text="City"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content" />
-     <Spinner
-         android:layout_width="150dip"
-         android:layout_height="40dip"
-         android:layout_toRightOf="@+id/text_view_city"
-         android:id="@+id/spinner_city"
-         android:layout_weight="1" />
-     <EditText
-         android:layout_toRightOf="@id/spinner_city"
-         android:id="@+id/text_post_code"
-         android:hint="Pin Code"
-         android:layout_height="40dip"
-         android:layout_width="120dip"
-         android:inputType="number"/>
+       <RelativeLayout
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/text_view_city"
+            android:text="City"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:layout_width="150dip"
+            android:layout_height="40dip"
+            android:layout_toRightOf="@+id/text_view_city"
+            android:id="@+id/spinner_city"
+            android:layout_weight="1" />
+        <EditText
+            android:layout_toRightOf="@id/spinner_city"
+            android:id="@+id/text_post_code"
+            android:hint="Pin Code"
+            android:layout_height="40dip"
+            android:layout_width="120dip"
+            android:inputType="number"/>
 
-        <Button
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_toRightOf="@id/text_post_code"
-            android:background="@drawable/search_icon"
-            android:id="@+id/button_search"/>
-    </RelativeLayout>
+           <Button
+               android:layout_width="30dp"
+               android:layout_height="30dp"
+               android:layout_toRightOf="@id/text_post_code"
+               android:background="@drawable/search_icon"
+               android:id="@+id/button_search"/>
+       </RelativeLayout>
 
- </LinearLayout>
+    </LinearLayout>-->
 
-<LinearLayout
-    android:id="@+id/bottomLayout"
-    android:layout_below="@+id/middleLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <fragment
-        android:id="@+id/map"
-        class="com.google.android.gms.maps.SupportMapFragment"
+    <LinearLayout
+        android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_map" />
+        android:layout_height="match_parent">
+
+        <fragment
+            android:id="@+id/map"
+            class="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout="@layout/fragment_map" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
-
-
-</RelativeLayout>
