--- a/GoogleMapTest/app/src/main/res/layout/fragment_user_info.xml
+++ b/GoogleMapTest/app/src/main/res/layout/fragment_user_info.xml
@@ -75,4 +75,10 @@
         android:layout_gravity="center_horizontal"
         android:text="Update" />
 
+    <Button
+        android:id="@+id/btn_change_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Change Fragment"/>
 </LinearLayout>
